<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_constrasena">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="text_create_account">Si aún no tines cuenta, registrate aquí</string>
    <string name="text_go_login">Si ya dispones de una cuenta, iniciar sesión aquí</string>
    <string name="btn_signup">Registrarme</string>
    <string name="hint_username">Nombre de usaurio</string>
</resources>