<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/editTexttEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo_minitwitter_white" />

    <EditText
        android:id="@+id/editTexttEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_constrasena"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoggin"
        app:layout_constraintEnd_toEndOf="@+id/editTexttEmail"
        app:layout_constraintStart_toStartOf="@+id/editTexttEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTexttEmail"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonLoggin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_login"
        android:textColor="@color/colorAzul"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/text_create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoggin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLoggin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoggin"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>