<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAzul"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-301dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/logo_minitwitter_white" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHighlight="@color/colorAzulDark"
            android:textColorHint="@color/colorAzulDark"
            android:textColorLink="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
            app:layout_constraintStart_toStartOf="@+id/editTextUserName"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_constrasena"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:textColorHighlight="@color/colorAzulDark"
            android:textColorHint="@color/colorAzulDark"
            android:textColorLink="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_signup"
            android:textColor="@color/colorAzul"
            app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/text_go_login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
            app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAzulDark"
            android:textColorLink="@color/colorAzul"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>